# CppTemplate

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.txt
CppTemplate/: CMakeLists.txt
cpp_template/: CMakeLists.txt
src/: main.cpp
